# attack-gec-metrics

./: LICENSE  README.md  pyproject.toml
attack_results/: bea19-dev-llmsent.txt  bea19-dev-scribendi.txt  conll14-impara.txt  conll14-scribendi.txt  conll14-some.txt
experiments/: README.md
experiments/attack_results/: bea19-dev-impara.txt  bea19-dev-some.txt  conll14-llmsent.txt
experiments/benchmark/: base.py
experiments/scripts/: attack.py  gen_table.py  run_bench_llm.py  run_bench_non_llm.py
src/attack_gec_metrics/: __init__.py
src/attack_gec_metrics/attackers/: __init__.py  base.py  impara.py  llm_sent.py  scribendi.py  some.py
src/attack_gec_metrics/benchmark/: __init__.py  base.py  pillars.py  seeda.py
