[project]
name = "attack-gec-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gotuiyan" }
]
requires-python = ">=3.11.0"
dependencies = [
    "faiss-cpu>=1.10.0",
    "gec-datasets>=0.1.1",
    "gec-metrics>=0.1.1",
    "protobuf>=6.30.2",
    "semsis>=0.1.3",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
gec-metrics = { path = "../gec-metrics", editable = true }
